# StormCell

./: .gitignore  Dockerfile  README.md  config.toml  lightning_log.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
legacy/: blitzortung_monitor2.py
src/blitz/: __init__.py  __main__.py  analysis.py  bench.py  blitz_ws.py  cli.py  config.py  db.py  geo.py  geocode.py  logging_setup.py  mqtt_worker.py  server.py  state.py  tracking.py  verification.py
src/blitz/web/: app.js  how-it-works.css  how-it-works.html  how-it-works.js  index.html  ops.css  ops.html  ops.js  style.css
tests/: test_analysis.py  test_bench.py  test_blitz_ws.py  test_config.py  test_db.py  test_geo.py  test_mqtt.py  test_server.py  test_state.py  test_tracking.py  test_verification.py
