[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stormcell"
version = "0.2.0"
description = "Moniteur d'orages Blitzortung : tracking de cellules orageuses et nowcasting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "leo-grnd" }]
dependencies = [
    "paho-mqtt>=2.0",
    "websocket-client>=1.7",
    "rich>=13",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
blitz = "blitz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blitz = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E/W: style & whitespace, F: pyflakes (imports/undefined), B: bugbear, I: import order
select = ["E", "W", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
# Les tests insèrent src/ dans sys.path avant les imports (exécution sans install).
"tests/*" = ["E402"]
